--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - POSTGRES_HOST=pg
     volumes:
       - .:/usr/src/hello_world
-    ports:
-      - '8000:80'
+
   pg:
     image: postgres:12-alpine
     environment:
@@ -30,3 +29,10 @@ services:
       - POSTGRES_PASSWORD=secret
       - POSTGRES_DB=demo
       - POSTGRES_HOST=pg
+
+  lb:
+    image: jfahrer/lb:latest
+    environment:
+      - PROXY_UPSTREAM=app:80
+    ports:
+      - 8000:80
